convert home page to hbs

--- a/public/head.html
+++ b/public/head.html
@@ -92,7 +92,7 @@
         </div>
       </div>
     </nav>
-    <!--./Navbar-->
+    <!--Navbar-->
     <div class="main-wrapper">
       <div></div>
     </div>
